--- a/file1.html
+++ b/file1.html
@@ -3,7 +3,7 @@
 <head>
     <link rel = "stylesheet" href = "style.css">
     <meta charset="UTF-8">
-    <title>bla bla</title>
+    <title>bla bla bla </title>
 </head>
 <body>
 
