--- a/file1.html
+++ b/file1.html
@@ -15,7 +15,7 @@
             <td colspan ="2">  <input type="text" name="name" > </td>
         </tr>
         <tr>
-            <td colspan ="2"> Пол </td>
+            <td colspan ="2"> Ваш Пол </td>
             <td colspan ="2">
                 <input type="radio" name="пол" value="Женский">  Женский
                 <input type="radio" name="пол" value="Мужской" >  Мужской </td>
